--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export("%>%")
 import(data.table)
 import(forcats)
 import(ggplot2)
+import(gtools)
 import(magrittr)
 import(purrr)
 importFrom(magrittr,"%>%")
