Initialer commit neue Funktionen und Naming

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,4 +22,9 @@ Imports:
     future,
     furrr,
     glue,
-    ggrepel
+    ggrepel,
+    caret,
+    stats,
+    dplyr,
+    ggridges,
+    tidyr
