Added target encoding

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export("%>%")
 export(combine_concatenation)
 export(combine_grouping)
 export(encode_frequency)
+export(encode_target)
 export(plot_feature_distributions)
 export(plot_noise_feature)
 export(plot_rank_combinations)
@@ -15,6 +16,7 @@ import(dplyr)
 import(forcats)
 import(ggplot2)
 import(ggridges)
+import(glue)
 import(gtools)
 import(magrittr)
 import(purrr)
